tests/baselines/reference/getJavaScriptSyntacticDiagnostics7.baseline
Syntactic Diagnostics for file '/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics7.ts':
/tests/cases/fourslash/a.js(1,8): error TS8006: 'module' declarations can only be used in TypeScript files.


==== /tests/cases/fourslash/a.js (1 errors) ====
    module M { }
           ~
!!! error TS8006: 'module' declarations can only be used in TypeScript files.